# multimodal-models-toolkit

./: .gitignore  Dockerfile  README.md  dev_guide.md  pyproject.toml  setup.cfg
docs/: conf.py  index.md
docs/source/: devguide.md  userguide.md
mmmt/: __init__.py
mmmt/data/: __init__.py
mmmt/data/graph/: __init__.py  concept_to_graph.py  data_to_graph.py  dgl_data_loader.py  general_file_loader.py  graph_to_graph.py  mat_file_loader.py  visualization.py
mmmt/data/operators/: __init__.py  op_build_graph.py  op_concat_names.py  op_forwardpass.py  op_resample.py
mmmt/data/representation/: __init__.py  auto_encoder_trainer.py  encoded_unimodal_to_concept.py  fusion.py  modality_encoding.py  model_builder_trainer.py
mmmt/models/: __init__.py  model_builder.py  multimodal_graph_model.py  multimodal_mlp.py
mmmt/models/classic/: fusion_mlp.py  late_fusion.py  uncertainty_late_fusion.py
mmmt/models/graph/: __init__.py  gcn.py  mgnn.py  module_configurator.py  multi_behavioral_gnn.py  multiplex_gcn.py  multiplex_gin.py  relational_gcn.py
mmmt/models/head/: __init__.py  mlp.py
mmmt/pipeline/: defaults.yaml  object_registry.py  pipeline.py
mmmt_examples/: README.md
mmmt_examples/knight/: demonstration_notebook.ipynb  full_mmmt_pipeline.py  get_splits.py  knight_eval.py  mmmt_pipeline_config.yaml  mmmt_pipeline_config_demonstration.yaml  mmmt_pipeline_config_demonstration_mlp.yaml  op_knight.py
test/data/graph/: test_dgl_data_loader.py  test_general_file_loader.py  test_graph_to_graph.py  test_mat_file_loader.py  test_visualization.py
test/data/operators/: test_operators.py
test/data/representation/: test_encoded_unimodal_to_concept.py  test_modality_encoding.py
test/models/: test_mgm.py  test_model_builder.py
test/models/classic/: test_classic_models.py
test/models/graph/: test_graph_models.py  test_module_configurator.py
test/models/head/: test_head_models.py
test/pipeline/: test.yaml  test_mlp.yaml  test_pipeline.py
