# configuration approach followed:
# - whenever possible, prefer pyproject.toml
# - for configurations insufficiently supported by pyproject.toml, use setup.cfg instead
# - setup.py discouraged; minimal stub included only for compatibility with legacy tools

# pyproject.toml support for configs outside PEP 621 is currently only in beta
# see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[options]
packages = find:

[options.packages.find]
exclude =
    test

# flake8 currently does not support pyproject.toml
# see https://github.com/PyCQA/flake8/issues/234
[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503
